--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<title>Your Website</title>
+	<title>Wellington Connections</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
@@ -23,7 +23,7 @@
 		<p>This is a simple nav bar, which is full width of the page</p>
 	</section>
 	<nav>
-		<h3>Navigation Barr</h3>
+		<h3>Explore Connections</h3>
 		<a href="#one">Link 1</a>
 		<a href="#two">Link 2</a>
 		<a href="#three">Link 3</a>
