--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 	</section>
 	<nav>
 		<h3>Explore Connections</h3>
-		<a href="#one">Link 1</a>
-		<a href="#two">Link 2</a>
-		<a href="#three">Link 3</a>
+		<a href="#one">Manholes</a>
+		<a href="#two">Antenna</a>
+		<a href="#three">Other</a>
 	</nav>
 
 	<section id="one">
